fix: address SonarCloud validation issues